--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src/index.js ",
     "dev": "env-cmd -f ./config/dev.env nodemon src/index.js --ext js,graphql --exec",
-    "get-schema": "graphql-codegen --config ./codegen.yml"
+    "get-schema": "graphql-codegen --config ./codegen.yml --dotenv ./config/dev.env"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
