configured jest to start and stop graphql server on test run

--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "graphql-basics",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT",
   "scripts": {
     "start": "node src/index.js ",
     "dev": "env-cmd -f ./config/dev.env nodemon src/index.js --ext js,graphql --exec",
-    "test": "jest --watch",
+    "test": "env-cmd -f ./config/test.env jest --watch",
     "get-schema": "graphql-codegen --config ./codegen.yml --dotenv ./config/dev.env"
+  },
+  "jest": {
+    "globalSetup": "./tests/jest/globalSetup.js",
+    "globalTeardown": "./tests/jest/globalTeardown.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -20,5 +23,6 @@
     "@graphql-cli/codegen": "^1.17.8",
     "@graphql-codegen/schema-ast": "^1.17.8",
     "jest": "^26.4.2"
-  }
+  },
+  "license": "MIT"
 }
